--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="en_US" prefix="og: http://ogp.me/ns# website: http://ogp.me/ns/website#">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon shortcut" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Hono Playground</title>
+    <!-- OGP -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Hono Playground">
+    <meta property="og:description" content="Hono Playground">
+    <meta property="og:site_name" content="Hono Playground">
+    <meta property="og:url" content="https://hono-play.ame-x.net">
+    <meta property="og:image" content="https://hono-play.ame-x.net/favicon.png">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="720">
+    <meta property="og:locale" content="ja_JP">
+    <!-- OGP for Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Hono Playground">
+    <meta name="twitter:description" content="Playground for Hono🔥">
+    <meta name="twitter:image" content="https://www.ame-x.net/assets/favicon.webp">
+    <meta name="twitter:creator" content="@amex2189">
   </head>
   <body>
     <div id="root"></div>
