fix: move prefix  to head from html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en_US" prefix="og: http://ogp.me/ns# website: http://ogp.me/ns/website#">
-  <head>
+<html lang="en_US">
+  <head prefix="og: http://ogp.me/ns# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <link rel="icon shortcut" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
