--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Hono Playground">
     <meta name="twitter:description" content="Playground for Hono🔥">
-    <meta name="twitter:image" content="https://www.ame-x.net/assets/favicon.webp">
+    <meta name="twitter:image" content="https://hono-play.ame-x.net/favicon.png">
     <meta name="twitter:creator" content="@amex2189">
   </head>
   <body>
