--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <meta name="twitter:description" content="Playground for Hono🔥" />
         <meta name="twitter:image" content="https://hono-play.ame-x.net/favicon.png" />
         <meta name="twitter:creator" content="@amex2189" />
+        <!-- CONFIG -->
+        <meta name="poweredby" content="Hono" />
+        <meta name="robots" content="index, follow" />
     </head>
     <body>
         <div id="root"></div>
